=== HEAD

* Add Dataset#exclude_where and Dataset#exclude_having methods, so you can force use of having or where clause (jeremyevans)

* Allow Dataset#select_all to take table name arguments and select all columns from each given table (jeremyevans)

* Add Dataset#select_group method, for selecting and grouping on the same columns (jeremyevans)

* Allow Dataset#group and Dataset#group_and_count to accept a virtual row block (jeremyevans)

=== 3.24.1 (2011-06-03)

* Ignore index creation errors if using create_table? with the IF NOT EXISTS syntax (jeremyevans) (#362)

=== 3.24.0 (2011-06-01)

* Add prepared_statements_association plugin, for using prepared statements by default for regular association loading (jeremyevans)

* Add prepared_statements_safe plugin, for making prepared statement use with models more safe (jeremyevans)

* Add prepared_statements_with_pk plugin, for using prepared statements for dataset lookups by primary key (jeremyevans)

* Fix bug in emulated prepared statement support not supporting nil or false as bound values (jeremyevans)

* Add Dataset#unbind for unbinding values from a dataset, for use with creating prepared statements (jeremyevans)

* Add prepared_statements plugin for using prepared statements for updates, inserts, deletes, and lookups by primary key (jeremyevans)

* Make Dataset#[] for model datasets consider a single integer argument as a lookup by primary key (jeremyevans)

* Add Dataset#with_pk for model datasets, for finding first record with matching primary key value (jeremyevans)

* Add defaults_setter plugin for setting default values when initializing model instances (jeremyevans)

* Add around hooks (e.g. around_save) to Sequel::Model (jeremyevans)

* Add Model#initialize_set private method to ease extension writing (jeremyevans)

* Only typecast bit fields to booleans on MSSQL, the MySQL bit type is a bitfield, not a boolean (jeremyevans)
