@@ -1,5 +1,7 @@
 === HEAD
 
+* Fix bug loading plugins on 1.9 where ::ClassMethods, ::InstanceMethods, or ::DatasetMethods is defined (jeremyevans)
+
 * Add Dataset#exclude_where and Dataset#exclude_having methods, so you can force use of having or where clause (jeremyevans)
 
 * Allow Dataset#select_all to take table name arguments and select all columns from each given table (jeremyevans)
